Fix layout "jump" when switching between tabs
On the "Question List" tab, the content will "jump" a few pixels to the
left due to the content exceeding the page height (ie. it has a lot of
rows, which our table does). As a result, we need to account for this by
calculating the left and right margin when the user switches to the
respective tab, whether the scroll bar is present or not.

See
https://stackoverflow.com/questions/9341465/prevent-a-centered-layout-from-shifting-its-position-when-scrollbar-appears#answer-42987298

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
 .App {
-  margin: 0;
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
 
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased !important;
